src/test/ui/async-await/issues/issue-63388-2.nll.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-63388-2.rs:12:10
   |
LL |     ) -> &dyn Foo
   |          ^ help: consider using the named lifetime: `&'a`
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `foo` or `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
